DISPATCH-790 Fix context menu position. Allow info panel on topology page for stand-alone to expand/collapse

--- a/console/stand-alone/plugin/css/dispatch.css
+++ b/console/stand-alone/plugin/css/dispatch.css
@@ -479,7 +479,7 @@ div.boolean {
 .contextMenu ul {
 	width:300px;
 	margin:0;
-	/* padding:10px; */
+	padding-left:0;
 	list-style:none;
 	background:#fff;
 	color:#333;
